@@ -17,3 +17,7 @@ generated_by: ExtUtils::MakeMaker version 6.17
 license: perl
 license: perl
 license: perl
+license: perl
+license: perl
+license: perl
+license: perl
